src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0007.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram CD4AC0007 {
  class C extends C2;
  class C2 extends C;
  interface I extends I2;
  interface I2 extends I;
}